# render

./: .gitignore  Cargo.toml
assets/shaders/: cube.wgsl
examples/: cube.rs  openxr.rs
src/: lib.rs  main.rs
src/renderer/: bind_group.rs  bind_group_layout.rs  buffer.rs  buffer_data.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs  vertex.rs
src/utils/: camera.rs  geometry.rs
src/vk_renderer/: command_buffer.rs  command_pool.rs  device.rs  fence.rs  framebuffer.rs  input.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  render_pass.rs  renderer.rs  session.rs  shader_module.rs  space.rs  swapchain.rs  triangle.frag  triangle.vert
