[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
tokio = {version = "1.15.0", features = ["full"]}
wgpu = "0.12"
winit = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = [
    "loaded",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = [
    "static",
] }

[[example]]
name = "cube"
path = "examples/cube.rs"

[[example]]
name = "openxr"
path = "examples/openxr.rs"
crate-type = ["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 30
