[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
openxr = { git = "https://github.com/Ralith/openxrs", features = ["loaded"]}
tokio = {version = "1.15.0", features = ["full"]}
wgpu = "0.12"
winit = "0.26"

[[example]]
name = "cube"
path = "examples/cube.rs"

[[example]]
name = "openxr"
path = "examples/openxr.rs"

# later
[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 30
